# leipzig-votes

./: Cargo.toml  README.md  Shuttle.toml  harvester.toml
data/: Bundestagswahl_Zweitstimme_2025.json  Leipzig_Europawahl_2024.json  Leipzig_Landtagswahl_2024.json
src/: main.rs
src/app/: data.rs  mod.rs
src/javascript/: map.js
src/structs/: askama.rs  votes.rs
templates/: main.html  map.html
