[package]
name = "vis_municipality_votes"
authors = ["Johannes Wagner <wagnerjoha.leipzig@gmail.com>"]
repository = "https://github.com/yokana65/vus_municipality_votes"
license = "AGPL-3.0"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6"
actix-service = "2.0"
actix-files = "0.6"
askama = "0.12"
anyhow = "1.0"
csv = "1.3"
geo = "0.28"
geojson = "0.24"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-runtime = "0.52"
shuttle-actix-web = "0.52"
scraper = "0.19"
toml ="0.8"
tokio = { version = "1.0", features = ["full"] }
